# multi-ai-system

./: .pre-commit-config.yaml  CHANGELOG.md  FINAL_SUMMARY.md  FREEMIUM_SETUP.md  INSTALL.md  Makefile  PITCH.md  RAPPORT_ANALYSE_COMPLETE.md  README.md  SAFEGUARDS_APPLIED.md  fix_reset_ui.py  frontend_demo_fix.js  index.html  install.sh  pitch.html  pyproject.toml  remove_emojis.py  render.yaml  vercel.json
_frontend-home-future/: app.js  audits.html  home.css  index.html
backend/: .env.example  config.py  database.py  main.py  main_simple.py  requirements.txt  send_welcome_emails.py  test_smart_router.py  waitlist_routes.py
backend/models/: room.py
backend/orchestrator/: __init__.py  collaborator.py  smart_router.py
backend/providers/: ai_personas.py  llm_router.py
backend/room/: manager.py
backend/routes/: demo.py
frontend/: redirect.html
frontend-staging/: admin.html  cookies.html  index.html  index.html.old-tech  privacy.html  robots.txt  terms.html
frontend-v1/: admin.html  index.html  sitemap.xml  test-demo.html
scripts/: start-backend.sh  status.sh  vps-install.sh
